# cprime-bot

./: .gitignore  Cargo.toml  README.md
src/: cmd.rs  config.rs  main.rs  other_cmd.rs  utils.rs
src/cmd/: contest_cmd.rs  help_cmd.rs  mod.rs  oi_cmd.rs  other_cmd.rs  structs.rs  tetr_cmd.rs
src/utils/: constant.rs  deserializer.rs  macros.rs  traits.rs  types.rs
