[package]
name = "cprime-bot-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
poise = "0.6.1"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.203"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
toml = "0.8.13"

